--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "\"This is loan management project\"",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "build":"tsc"
   },
   "author": "farukulWD",
   "license": "ISC",
@@ -14,6 +15,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mongoose": "^8.7.1",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "winston": "^3.15.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
