--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 NODE_ENV=development
 PORT=5000
 DATABASE_URL=mongodb+srv://admin:fcWYTk8rlqs0krgj@cluster0.dkrd4w8.mongodb.net/worldbank
+SALT=12
+CLOUDINARY_CLOUD_NAME=put_your_coudinary_cloud_name
+CLOUDINARY_API_KEY=put_your_coudinary_api_key
+CLOUDINARY_API_SECRET=put_your_coudinary_api_secret
