user flow complete

--- a/.env
+++ b/.env
@@ -9,3 +9,4 @@ JWT_REFRESH_EXPIRES_IN=365d
 CLOUDINARY_CLOUD_NAME=deido9945
 CLOUDINARY_API_KEY=411556659433691
 CLOUDINARY_API_SECRET=akjDB7S9nOLbzrDv3WdbX5AZ4Ss
+RESET_PASS_UI_LINK= http://localhost:5173/auth/reset-password
